objects/FSM_Rel_cont_to_CL__c.object
<CustomObject>
    <description>Field Services program

Schneider or external Contacts related to a Customer Location.
Such as : Facility Manager</description>
    <fields>
        <fullName>Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Related to following Customer Location(s)</relationshipLabel>
        <relationshipName>Related_contacts_to_Customer_Location</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Customer_Location__c</fullName>
        <label>Customer Location</label>
        <referenceTo>CustomerLocation__c</referenceTo>
        <relationshipLabel>Related contacts</relationshipLabel>
        <relationshipName>Related_contacts_to_Customer_Location</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <reparentableMasterDetail>true</reparentableMasterDetail>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Role__c</fullName>
        <description>Role Contact Job Function List</description>
        <label>Role</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Planning Contact</fullName>
                </value>
                <value>
                    <fullName>Maintenance Contact</fullName>
                </value>
                <value>
                    <fullName>Sales Contact</fullName>
                </value>
                <value>
                    <fullName>Service Contract</fullName>
                </value>
                <value>
                    <fullName>Finance</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Related contact to Customer Location</label>
    <nameField>
        <displayFormat>RelContactCL-{000000}</displayFormat>
        <label>Related contacts to Customer Location Na</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Related contacts to Customer Location</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>